--- a/testpage.css
+++ b/testpage.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Allura&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rancho&family=Rock+Salt&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+
 body {
   background-color: #ffffff;
   font-family: "Montserrat", sans-serif, "Allura", "Playfair Display" !important;
@@ -15,24 +16,9 @@ body {
   margin-top: -2px;
 }
 [class*="container2"] {
-  /* border: 2px solid yellow; */
-}
-[class*="container3"] {
-  /* border: 30px solid yellow;  */
-  background-color: #f5f6f8;
+  /* border: 2px solid red; */
 }
 
-.sentence {
-  border: 2px solid black;
-  overflow: hidden;
-}
-.sentence p {
-  margin-left: 70px;
-  font-size: 24px;
-  text-align: left;
-  letter-spacing: 5px;
-  line-height: 26px;
-}
 #wc {
   background-color: #c1cad3;
   padding: 7px;
@@ -56,8 +42,8 @@ nav {
   background: #fff;
 }
 .logo {
-  margin-left: 110px;
-  width: 250px;
+  margin-left: 125px;
+  width: 200px;
   height: auto;
 }
 nav ul {
@@ -104,4 +90,74 @@ nav ul ul li {
 }
 nav ul ul ul li {
   position: relative;
+}
+.paws-logo {
+  width: 13%;
+  height: auto;
+  margin-bottom: -20px;
+  /* border: 3px solid red; */
+}
+.gitna {
+  /* border: 3px solid red; */
+}
+
+.gitna #p1 {
+  /* border: 3px solid red; */
+  font-family: "Montserrat" !important;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 5px;
+  font-weight: 650;
+  margin-bottom: -7px;
+}
+.gitna #p2 {
+  /* border: 3px solid red; */
+  font-family: "Playfair Display" !important;
+  font-size: 36px;
+  line-height: 40px;
+}
+.gitna #p3 {
+  /* border: 3px solid red; */
+  font-family: Montserrat !important;
+  letter-spacing: normal;
+  font-size: 15px;
+  text-align: center;
+  line-height: 22px;
+  color: #3e444b;
+  padding: 30px;
+}
+.asologo {
+  width: 100%;
+  height: auto;
+  /* border: 3px solid black; */
+  position: relative;
+}
+#vetcare {
+  margin-top: 145px;
+}
+.sentence {
+  /* border: 2px solid black; */
+}
+.sentence p {
+  margin-left: 85px;
+  font-size: 24px;
+  text-align: left;
+  letter-spacing: 5px;
+  /* line-height: 26px; */
+}
+.button1 {
+  font-family: "Montserrat" !important;
+  text-align: center;
+  font-size: 12px;
+  letter-spacing: 3px;
+  margin-left: 140px;
+  margin-top: 50px;
+}
+.pangalawa,
+.p1,
+.p2,
+.p3,
+.row,
+.col {
+  background-color: #f5f6f8;
 }
