--- a/css/appointment.css
+++ b/css/appointment.css
@@ -15,7 +15,8 @@ body {
 }
 
 [class*="container1"] {
-    margin-top: -2px;
+    /* margin-top: -100px; */
+    /* border: 2px solid red; */
 
 }
 
@@ -118,4 +119,10 @@ nav ul ul li {
 
 nav ul ul ul li {
     position: relative;
+}
+
+.top-image {
+    pad: 10px;
+    height: 300px;
+    border-radius: 30px;
 }
