--- a/css/index.css
+++ b/css/index.css
@@ -84,6 +84,7 @@ nav ul li a {
 
 .hober a:hover {
   background: rgb(150, 150, 150);
+
 }
 
 nav ul ul {
@@ -105,20 +106,19 @@ nav ul ul li {
   position: relative;
 }
 
-nav ul ul ul li {
+/* nav ul ul ul li {
   position: relative;
-}
+} */
 
 .paws-logo {
   width: 13%;
   height: auto;
-  margin-bottom: -20px;
+  margin-bottom: -5px;
   /* border: 3px solid red; */
 }
 
 .container4 img {
   width: 18%;
-
 }
 
 .gitna {
@@ -237,4 +237,57 @@ nav ul ul ul li {
   color: #fff;
   padding: 10px, 25px;
   border-radius: 20px;
+}
+
+/* FOOTER TO  */
+
+footer {
+  border: 2px red solid;
+  height: 400px;
+  padding: 0;
+
+}
+
+
+footer iframe {
+  margin-left: -15px;
+}
+
+.footerright .row {
+  background-color: #c1cad3;
+  color: #3e444b;
+  align-content: center;
+
+  /* border: 3px red solid; */
+}
+
+.footerright {
+  align-content: center;
+}
+
+.footerright {
+  background-color: #c1cad3;
+}
+
+.footerright,
+p,
+h1 {
+  font-family: "Montserrat" !important;
+  font-weight: 500;
+  letter-spacing: normal;
+  line-height: 20px;
+}
+
+.iconsto img {
+  width: 10%;
+  height: auto;
+}
+
+.iconsto {
+  align-content: center;
+  font-family: "Montserrat" !important;
+}
+
+footer h1 {
+  letter-spacing: 2px;
 }
