--- a/landing.css
+++ b/landing.css
@@ -5,7 +5,7 @@
 body {
   background-color: #ffffff;
   font-family: "Montserrat", sans-serif, "Allura", "Playfair Display" !important;
-  background-image: url(images/bg1.png);
+  background-image: url(images/bgbgbg.png);
 
 }
 
