--- a/landing.css
+++ b/landing.css
@@ -2,10 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Rancho&family=Rock+Salt&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 
+
 body {
   background-color: #ffffff;
   font-family: "Montserrat", sans-serif, "Allura", "Playfair Display" !important;
-  background-image: url(images/bgbgbg.png);
+  /* background-image: url(images/bgbgbg.png); */
 
 }
 
@@ -23,24 +24,6 @@ body {
 [class*="container2"] {
   /* border: 2px solid red; */
   overflow: hidden;
-}
-
-
-#wc {
-  background-color: #c1cad3;
-  padding: 7px;
-  color: #3e444b;
-}
-
-nav a::before {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 0;
-  height: 2.5px;
-  background: #c1cad3;
-  transition: 0.3s;
 }
 
 nav a:hover::before {
@@ -83,10 +66,7 @@ nav ul li a {
   letter-spacing: 2px;
 }
 
-.hober a:hover {
-  background: rgb(150, 150, 150);
 
-}
 
 nav ul ul {
   position: absolute;
@@ -166,10 +146,6 @@ nav ul ul li {
 #vetcare {
   margin-top: 145px;
   font-weight: 500;
-}
-
-.sentence {
-  /* border: 2px solid black; */
 }
 
 .sentence p {
