"Updated CSS styles, added new styles for buttons and forms, modified HTML structure and content in various pages, removed some image files, and added JavaScript code for scroll animation."

--- a/Pages/css/checkups.css
+++ b/Pages/css/checkups.css
@@ -130,6 +130,7 @@ button:hover {
     /* Center the logo horizontally */
     align-items: center;
     /* Center the logo vertically */
+    /* meaning gumagana to csss peek */
 }
 
 .footer-logo img {
