"Updated footer section in multiple pages, added font awesome icons, and changed clinic name and address."

--- a/Pages/css/about.css
+++ b/Pages/css/about.css
@@ -59,6 +59,8 @@ nav a::before {
     /* Center the logo horizontally */
     align-items: center;
     /* Center the logo vertically */
+    /* meaning gumagana to csss peek */
+    /* margin-top: -20px; */
 }
 
 .footer-logo img {
